syntax = "proto3";

option go_package = "/pb";

import "google/protobuf/timestamp.proto";

message CreateRequestAccount {
  string name = 1;
  string beneficiary = 2;
}

message ResponseAccount {
  string id = 1;
  string name = 2;
  string beneficiary = 3;
  string iban = 4;
  string bic = 5;
  google.protobuf.Timestamp createAt = 6;
  google.protobuf.Timestamp updatedAt = 7;
  double balance = 8;
}

service Account {
  rpc CreateAccount(CreateRequestAccount) returns (ResponseAccount) {}
}
